Add Logo and Style

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,6 @@
     <app-historia id="historia"></app-historia>
     <app-countdown id="countdown"></app-countdown>
     <app-rsvp id="rsvp"></app-rsvp>
-    <app-presentes id="presente"></app-presentes>
+    <!-- <app-presentes id="presente"></app-presentes> -->
     <router-outlet></router-outlet>
 </div>
