--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,10 +1,10 @@
-<section>
-    <div class="primary-image"></div>
-</section>
+<!-- <section>
+    
+</section> -->
 <section>
     <div class="text-description">
-        <h1>Diana e Leonardo</h1>
-        <h2>Estão se casando</h2>
+        <!-- <div class="primary-image"></div> -->
+        <img src="../../assets/imagens/bannerInicioIniciais.png" alt="" />
         <p>
             E a melhor forma de compartilhar esses momentos com vocês é unindo sonhos. Aqui vamos contar a vocês, queridos amigos e familiares os momentos mais marcantes da nossa história de amor.
         </p>
