--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -1,5 +1,5 @@
 section .primary-image{
-    background: url('https://fakeimg.pl/1280x720/c4aa99/eae0d0/');
+    background: "../../assets/imagens/Imagem 02-07-2024 às 17.41.png";
     background-repeat: no-repeat;
     /* background-attachment: fixed; */
     background-position: 0% 55%;
@@ -14,16 +14,21 @@ section div h1 {
     font-family: 'AlexBrush-Regular';
 }
 
+section div img{
+  display: math;
+}
+
 .text-description{
     margin-top: 10px;
     text-align: center;
-    padding: 30px 20px;
+    padding: 20px 20px;
     font-family: 'josefin sans';
+    display: ruby;
 }
 
-.text-description * {
+/* .text-description * {
     margin-bottom: 10px ;
-}
+} */
 
 .text-description *:last-child {
     margin-bottom: 0 ;
