--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,5 +1,5 @@
 <nav>
-    <h1>Di e Léo</h1>
+    <h1>Dina e Leonardo</h1>
     <div class="line"></div>
     <svg (click)="toggleMenu()" viewBox="0 0 100 80" width="30" height="20">
       <rect width="100" height="15"></rect>
